; ModuleID = '/home/carl/AnghaBench/freebsd/sbin/restore/extr_dirs.c_pathsearch.c'
source_filename = "/home/carl/AnghaBench/freebsd/sbin/restore/extr_dirs.c_pathsearch.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.direct = type { i32 }

@MAXPATHLEN = common dso_local global i32 0, align 4
@UFS_ROOTINO = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [2 x i8] c"/\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.direct* @pathsearch(i8* %0) #0 {
  %2 = alloca %struct.direct*, align 8
  %3 = alloca i8*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.direct*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i64, align 8
  %10 = alloca i32, align 4
  store i8* %0, i8** %3, align 8
  %11 = load i32, i32* @MAXPATHLEN, align 4
  %12 = zext i32 %11 to i64
  %13 = call i8* @llvm.stacksave()
  store i8* %13, i8** %8, align 8
  %14 = alloca i8, i64 %12, align 16
  store i64 %12, i64* %9, align 8
  %15 = load i8*, i8** %3, align 8
  %16 = call i32 @strcpy(i8* %14, i8* %15)
  store i8* %14, i8** %6, align 8
  %17 = load i32, i32* @UFS_ROOTINO, align 4
  store i32 %17, i32* %4, align 4
  br label %18

18:                                               ; preds = %23, %1
  %19 = load i8*, i8** %6, align 8
  %20 = load i8, i8* %19, align 1
  %21 = sext i8 %20 to i32
  %22 = icmp eq i32 %21, 47
  br i1 %22, label %23, label %26

23:                                               ; preds = %18
  %24 = load i8*, i8** %6, align 8
  %25 = getelementptr inbounds i8, i8* %24, i32 1
  store i8* %25, i8** %6, align 8
  br label %18

26:                                               ; preds = %18
  store %struct.direct* null, %struct.direct** %5, align 8
  br label %27

27:                                               ; preds = %43, %26
  %28 = call i8* @strsep(i8** %6, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str, i64 0, i64 0))
  store i8* %28, i8** %7, align 8
  %29 = icmp ne i8* %28, null
  br i1 %29, label %30, label %35

30:                                               ; preds = %27
  %31 = load i8*, i8** %7, align 8
  %32 = load i8, i8* %31, align 1
  %33 = sext i8 %32 to i32
  %34 = icmp ne i32 %33, 0
  br label %35

35:                                               ; preds = %30, %27
  %36 = phi i1 [ false, %27 ], [ %34, %30 ]
  br i1 %36, label %37, label %47

37:                                               ; preds = %35
  %38 = load i32, i32* %4, align 4
  %39 = load i8*, i8** %7, align 8
  %40 = call %struct.direct* @searchdir(i32 %38, i8* %39)
  store %struct.direct* %40, %struct.direct** %5, align 8
  %41 = icmp eq %struct.direct* %40, null
  br i1 %41, label %42, label %43

42:                                               ; preds = %37
  store %struct.direct* null, %struct.direct** %2, align 8
  store i32 1, i32* %10, align 4
  br label %49

43:                                               ; preds = %37
  %44 = load %struct.direct*, %struct.direct** %5, align 8
  %45 = getelementptr inbounds %struct.direct, %struct.direct* %44, i32 0, i32 0
  %46 = load i32, i32* %45, align 4
  store i32 %46, i32* %4, align 4
  br label %27

47:                                               ; preds = %35
  %48 = load %struct.direct*, %struct.direct** %5, align 8
  store %struct.direct* %48, %struct.direct** %2, align 8
  store i32 1, i32* %10, align 4
  br label %49

49:                                               ; preds = %47, %42
  %50 = load i8*, i8** %8, align 8
  call void @llvm.stackrestore(i8* %50)
  %51 = load %struct.direct*, %struct.direct** %2, align 8
  ret %struct.direct* %51
}

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #1

declare dso_local i32 @strcpy(i8*, i8*) #2

declare dso_local i8* @strsep(i8**, i8*) #2

declare dso_local %struct.direct* @searchdir(i32, i8*) #2

; Function Attrs: nounwind
declare void @llvm.stackrestore(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
